--- a/paper/supp/supp.tex
+++ b/paper/supp/supp.tex
@@ -205,6 +205,18 @@
 
 \defaultLineSpace    		%%% Line spacing
 
+\vfill
+
+\section{Permutation}
+and~\ref{fig.supp.perm}.
+
+\begin{figure}[!h]
+  \centering
+  \includegraphics[width=\linewidth]{fig/perm.pdf}
+  \label{fig.supp.perm}
+\end{figure}
+
+\clearpage
 \section{\smashpp compared with other methods}
 The results of running \smashpp and other methods on real dataset is shown in Figures~\ref{fig.supp.GGA18.MGA20},~\ref{fig.supp.GGA14.MGA16},~\ref{fig.supp.HS12.PT12} and~\ref{fig.supp.PXO99A.MAFF_311018}.
 
